[gd_scene load_steps=3 format=3 uid="uid://d8x7puuy7j5a4"]

[ext_resource type="Script" path="res://scripts/ui/settings.gd" id="1_s4n2r"]
[ext_resource type="Theme" path="res://resources/themes/main_theme.tres" id="2_t5n2r"]

[node name="Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_t5n2r")
script = ExtResource("1_s4n2r")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 0.901961)

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 50.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 40
text = "Settings"
horizontal_alignment = 1

[node name="SettingsContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40

[node name="AudioSettings" type="VBoxContainer" parent="SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="SettingsContainer/AudioSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Audio Settings"
horizontal_alignment = 1

[node name="MasterVolume" type="HBoxContainer" parent="SettingsContainer/AudioSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/AudioSettings/MasterVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Master Volume"

[node name="MasterSlider" type="HSlider" parent="SettingsContainer/AudioSettings"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="MusicVolume" type="HBoxContainer" parent="SettingsContainer/AudioSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/AudioSettings/MusicVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Music Volume"

[node name="MusicSlider" type="HSlider" parent="SettingsContainer/AudioSettings"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="SFXVolume" type="HBoxContainer" parent="SettingsContainer/AudioSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/AudioSettings/SFXVolume"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "SFX Volume"

[node name="SFXSlider" type="HSlider" parent="SettingsContainer/AudioSettings"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="VideoSettings" type="VBoxContainer" parent="SettingsContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="SettingsContainer/VideoSettings"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Video Settings"
horizontal_alignment = 1

[node name="Resolution" type="HBoxContainer" parent="SettingsContainer/VideoSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="SettingsContainer/VideoSettings/Resolution"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Resolution"

[node name="ResolutionOption" type="OptionButton" parent="SettingsContainer/VideoSettings"]
layout_mode = 2

[node name="FullscreenCheck" type="CheckButton" parent="SettingsContainer/VideoSettings"]
layout_mode = 2
text = "Fullscreen"

[node name="VSyncCheck" type="CheckButton" parent="SettingsContainer/VideoSettings"]
layout_mode = 2
text = "VSync"

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -50.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Back"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
